Samples fix, show title on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -720,7 +720,6 @@ section.samples > div > h1 {
   font-size: 37px;
   text-align: center;
   color: #272727;
-  display: none;
 }
 section.samples > div > div#readmoresamples {
   display: flex;
@@ -1180,7 +1179,7 @@ footer > div > .available-wrap > h3 {
     align-items: center;
   }
   section.samples > div > div > div > ul {
-    /*width: 100%;*/
+    width: auto;
     padding: 0 30px 0 50px;
   }
 }
@@ -1192,7 +1191,7 @@ footer > div > .available-wrap > h3 {
     top: 550px;
   }
 }
-@media screen and (min-width: 23.4375rem) { /* 400px */
+@media screen and (min-width: 25rem) { /* 400px */
   #mobile-navigation > div:nth-child(2) {
     margin-top: 40px;
   }
@@ -1219,7 +1218,6 @@ footer > div > .available-wrap > h3 {
     top: 49px;
   }
   section.samples > div > h1 { 
-    display: block;
     margin-top: 120px;
   }
   section.samples > div > div > div > ul > li {
